<resources>
    <string name="app_name">My Application23</string>
    <string name="logout">logout</string>
    <string name="login_Form">login_Form</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="Login">Login</string>
    <string name="click_to_register">click_to_register</string>
    <string name="Register">Register</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="click_to_login">click_to_login</string>
</resources>