<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15sp"
    tools:context=".Login">




    <TextView
        android:id="@+id/textView3"
        android:layout_width="185dp"
        android:textStyle="bold"
        android:autoSizeMaxTextSize="60sp"
        android:gravity="center"
        android:layout_height="87dp"
        android:text="@string/login_Form"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="362dp"
        android:layout_height="79dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/EMAIL" />

    <EditText
        android:id="@+id/password"
        android:layout_width="370dp"
        android:layout_height="58dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PASSWORD" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

   <Button
       android:id="@+id/btn_login"
       android:text="@string/Login"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/rnNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Switch" />
</LinearLayout>