
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="15sp"
    tools:context=".Register">




    <TextView
        android:id="@+id/textView3"
        android:layout_width="185dp"
        android:textStyle="bold"
        android:autoSizeMaxTextSize="60sp"
        android:gravity="center"
        android:layout_height="87dp"
        android:text="@string/Register"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="379dp"
        android:layout_height="84dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/Email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="374dp"
        android:layout_height="74dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Password"
        tools:ignore="TextFields" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_Register"
        android:text="@string/Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>